--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,50 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="white">#FFFFFF</color>
+    <color name="gray_4">#444444</color>
+    <color name="gray_5">#555555</color>
+    <color name="gray_6">#666666</color>
+    <color name="gray_8">#888888</color>
+    <color name="gray_9">#999999</color>
+    <color name="gray_de">#dedede</color>
+    <color name="gray_f2">#f2f2f2</color>
+    <color name="gray_c">#cccccc</color>
+    <color name="gray_d">#dddddd</color>
+
+    <color name="black_10">#101010</color>
+    <color name="black_3">#333333</color>
+
+    <color name="red">#ff0000</color>
+
+    <color name="main_color">@color/colorAccent</color>
+    <color name="background_main">@color/gray_f2</color>
+    <color name="line_main">@color/gray_c</color>
+    <color name="white_half">#20ffffff</color>
+
+    <color name="toolbar_pressed">@color/white_half</color>
+    <color name="toolbar_normal">@color/colorPrimary</color>
+
+    <!--11111111111-->
+    <color name="normal_day">#ff999999</color>
+    <color name="selected_day_background">#ff3b2e</color>
+    <color name="selected_day_text">#ffffff</color>
+
+    <!--星期的颜色值-->
+    <color name="mn_calendar_color_text_week">#5E5E5E</color>
+    <!--日历Item的阳历的颜色值-->
+    <color name="mn_calendar_color_text_solar">#282828</color>
+    <!--日历Item的阴历的颜色值-->
+    <color name="mn_calendar_color_text_lunar">#979797</color>
+    <!--日历今天圆形背景-->
+    <color name="mn_calendar_color_today_bg">#282828</color>
+    <!--线-->
+    <color name="mn_calendar_color_line">#CCCCCC</color>
+    <!--白色-->
+    <color name="mn_calendar_color_white">#FFFFFF</color>
+    <!--不是当前月份的阳历的颜色-->
+    <color name="mn_calendar_color_other_month">#979797</color>
+    <!--白灰色-->
+    <color name="mn_calendar_color_gray_white">#dfdfdf</color>
 </resources>
