--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -3,15 +3,14 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.wxb.mvp.ui.activity.LoginActivity">
+    android:layout_height="match_parent">
 
     <include layout="@layout/custom_toolbar" />
 
     <com.wxb.mvp.view.ClearEditText
         android:id="@+id/et_phone"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
+        android:layout_height="@dimen/dp_44"
         android:layout_marginEnd="@dimen/dp_30"
         android:layout_marginStart="@dimen/dp_30"
         android:background="@drawable/bg_login_et"
@@ -23,17 +22,18 @@
         android:maxLength="11"
         android:paddingEnd="@dimen/dp_12"
         android:paddingStart="@dimen/dp_12"
+        android:text="13651269612"
         android:textColor="@color/gray_4"
         android:textColorHint="@color/gray_9"
         android:textSize="@dimen/sp_14"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintVertical_bias="0.25" />
 
     <com.wxb.mvp.view.ClearEditText
         android:id="@+id/et_pwd"
         android:layout_width="match_parent"
-        android:layout_height="44dp"
+        android:layout_height="@dimen/dp_44"
         android:layout_marginEnd="@dimen/dp_30"
         android:layout_marginStart="@dimen/dp_30"
         android:layout_marginTop="@dimen/dp_20"
@@ -43,8 +43,10 @@
         android:drawableStart="@mipmap/login_pwd"
         android:hint="@string/hint_pwd"
         android:inputType="textPassword"
+        android:maxLength="16"
         android:paddingEnd="@dimen/dp_12"
         android:paddingStart="@dimen/dp_12"
+        android:text="123456"
         android:textColor="@color/gray_4"
         android:textColorHint="@color/gray_9"
         android:textSize="@dimen/sp_14"
@@ -57,7 +59,7 @@
         android:layout_height="44dp"
         android:layout_marginEnd="@dimen/dp_30"
         android:layout_marginStart="@dimen/dp_30"
-        android:layout_marginTop="@dimen/dp_30"
+        android:layout_marginTop="@dimen/dp_44"
         android:background="@drawable/selector_login"
         android:gravity="center"
         android:text="@string/login"
