--- a/app/src/main/res/layout/custom_toolbar.xml
+++ b/app/src/main/res/layout/custom_toolbar.xml
@@ -2,7 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/ll_group"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/dp_48"
+    android:layout_height="wrap_content"
+    android:minHeight="@dimen/dp_48"
     android:background="@color/colorPrimary"
     android:visibility="visible"
     android:orientation="horizontal">
