--- a/app/src/main/res/layout/fragment_mall.xml
+++ b/app/src/main/res/layout/fragment_mall.xml
@@ -1,13 +1,17 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.wxb.mvp.ui.fragment.MallFragment">
+    android:fitsSystemWindows="true"
+    android:orientation="vertical">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="48dp"
+        android:textSize="@dimen/sp_20"
+        android:textColor="@color/black_3"
+        android:text="诗句“忽如一夜春风来”的作者是谁？"
+        android:background="@color/gray_f2"/>
+    <include layout="@layout/custom_toolbar" />
 
-</FrameLayout>
+</LinearLayout>
