--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,8 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
 
+    <dimen name="statusbar_view_height">0dp</dimen>
+
     <dimen name="dp_0">0dp</dimen>
     <dimen name="px_1">1px</dimen>
     <dimen name="dp_1">1dp</dimen>
