--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -34,11 +34,13 @@
             <Button
                 android:id="@+id/btn_1"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="@dimen/dp_44"
                 android:layout_marginEnd="@dimen/dp_30"
                 android:layout_marginStart="@dimen/dp_30"
+                android:background="@drawable/selector_login"
                 android:layout_marginTop="@dimen/dp_15"
-                android:text="test1" />
+                android:textColor="@color/white"
+                android:text="自定义验证码输入框" />
 
             <Button
                 android:id="@+id/btn_2"
