--- a/app/src/main/res/layout/activity_test_code.xml
+++ b/app/src/main/res/layout/activity_test_code.xml
@@ -14,6 +14,7 @@
         android:layout_marginLeft="@dimen/dp_10"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        ver:layout_constraintVertical_bias="0.3"
         android:digits="1234567890"
         ver:box="5"
         ver:layout_constraintLeft_toLeftOf="parent"
