--- a/app/src/main/res/layout/header_banner.xml
+++ b/app/src/main/res/layout/header_banner.xml
@@ -10,6 +10,7 @@
         android:background="@color/gray_c"/>
 
     <TextView
+        android:id="@+id/tv_test"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_52"
         android:background="@color/gray_d"
