--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -61,6 +61,7 @@
             <Button
                 android:id="@+id/btn_6"
                 android:layout_width="match_parent"
+                android:background="@drawable/selector_bg_border"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="@dimen/dp_15"
                 android:text="test6" />
