--- a/app/src/main/res/layout/activity_test_chart.xml
+++ b/app/src/main/res/layout/activity_test_chart.xml
@@ -12,8 +12,7 @@
     <com.github.mikephil.charting.charts.LineChart
         android:id="@+id/line_chart"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"/>
+        android:layout_height="@dimen/dp_120"/>
 
     <LinearLayout
         android:layout_width="match_parent"
