--- a/app/src/main/res/layout/activity_test_code.xml
+++ b/app/src/main/res/layout/activity_test_code.xml
@@ -1,35 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:ver="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.wxb.mvp.ui.activity.TestCodeActivity">
 
-    <include layout="@layout/custom_toolbar" />
+    <include layout="@layout/custom_toolbar"
+        tools:ignore="MissingConstraints" />
 
-    <com.wxb.mvp.view.VerificationCodeInput
+    <com.wxb.mvp.view.VerificationCodeView
         android:id="@+id/et_code"
-        android:layout_marginStart="@dimen/dp_10"
-        android:layout_marginLeft="@dimen/dp_10"
+        android:layout_marginTop="@dimen/dp_120"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        ver:layout_constraintVertical_bias="0.3"
+        android:layout_gravity="center"
         android:digits="1234567890"
-        ver:box="5"
-        ver:layout_constraintLeft_toLeftOf="parent"
-        ver:layout_constraintRight_toRightOf="parent"
-        ver:box_bg_focus="@drawable/bg_custom_edit_focus"
-        ver:box_bg_normal="@drawable/bg_custom_edit_normal"
-        ver:child_h_padding="@dimen/dp_10"
-        ver:layout_constraintBottom_toBottomOf="parent"
-        ver:layout_constraintTop_toTopOf="parent" />
+        ver:vcv_et_inputType="number"
+        ver:vcv_et_text_size="@dimen/sp_10"
+        ver:vcv_et_text_color="@color/gray_6"
+        ver:vcv_et_width="@dimen/dp_40"
+        ver:vcv_et_height="@dimen/dp_40"
+        ver:vcv_et_number="6"
+        ver:vcv_et_bg="@drawable/bg_custom_edit_normal" />
 
     <Button
         android:id="@+id/btn_confirm"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_44"
-        android:layout_marginTop="@dimen/dp_30"
+        android:layout_marginTop="@dimen/dp_40"
         android:background="@drawable/bg_btn_disabled"
         android:layout_marginStart="@dimen/dp_30"
         android:layout_marginEnd="@dimen/dp_30"
@@ -37,4 +37,4 @@
         android:text="confirm"
         ver:layout_constraintTop_toBottomOf="@+id/et_code" />
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
